fixed the whitespaces

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,6 +24,7 @@ html {
   display: block; 
   content: ''; 
   height: 120px;
+  display: flex; 
 } 
 
 
@@ -44,7 +45,6 @@ html {
     margin-top: 100px;
     background-image: url(https://www.transparenttextures.com/patterns/cartographer.png);
     background-color: #d6a185;
-
   }
 
   .profile {
@@ -52,7 +52,7 @@ html {
     margin-top: 100px;
     margin-right: 100px;
     margin-left: 50px;
-    
+
   }
 
   .container {
